--- a/lychee.toml
+++ b/lychee.toml
@@ -1,12 +1,14 @@
 ############################
-# .lychee.toml
-# Purpose:
-#   Centralize Lychee CLI options in a repo-local config file, so that
-#   local runs and CI runs behave identically.
+# lychee.toml
 #
-# Notes:
-#   - Lychee automatically uses "lychee.toml" if present in the CWD.
-#   - You can also pass: lychee --config .lychee.toml ...
+# Purpose:
+#   Lychee configuration for reproducible link checks locally and in CI.
+#
+# Key principles in this setup:
+#   1) Do NOT use regex look-ahead / look-behind (not supported by Lychee).
+#   2) Exclude unwanted directories/files via `exclude_path` (regex).
+#   3) Check only HTTP(S) links by scheme to avoid failing on local file artifacts.
+#   4) Accept HTTP 403 (some sites block automated link checkers).
 ############################
 
 
@@ -14,16 +16,14 @@
 # Display / Logging
 ############################
 
-# Verbose program output.
-# Accepts log levels: "error", "warn", "info", "debug", "trace"
-# In CI and local use, "info" is a good balance.
+# Log level: "error", "warn", "info", "debug", "trace"
+# Use "info" by default, switch to "debug" when troubleshooting.
 verbose = "info"
 
-# Disable interactive progress bar (cleaner logs, better CI output).
-no_progress = true
+# Disable interactive progress output (cleaner CI logs).
+no_progress = false # false=progress bar, true=file list
 
-# Output format:
-#   - "detailed" is human-friendly and works well in CI logs
+# Human-readable output for logs.
 format = "detailed"
 
 
@@ -31,21 +31,21 @@ format = "detailed"
 # Request Behavior
 ############################
 
-# Timeout per request (seconds).
-timeout = 15
+# Per-request timeout in seconds.
+# Consider increasing if you see frequent timeouts on vendor sites.
+timeout = 30
 
 # Maximum number of redirects to follow.
 max_redirects = 5
 
-# Retry behavior for transient network failures.
+# Retries help with flaky endpoints and transient failures (DNS, CDN, etc.).
 max_retries = 2
 retry_wait_time = 2
 
-# Only check HTTP(S) links.
-# This avoids "file://…" errors for local or generated artifacts.
-scheme = ["http", "https"]
+# Check web links AND local file links (including anchors in local Markdown/HTML).
+scheme = ["http", "https", "file"]
 
-# Do not enforce HTTPS automatically.
+# Do not enforce HTTPS globally (some sites still legitimately use HTTP).
 require_https = false
 
 
@@ -55,30 +55,15 @@ require_https = false
 
 # Treat these HTTP status codes as valid.
 #
-# Why include 403?
-#   Some sites (e.g. developer portals, OpenAI, vendor pages)
-#   block automated link checkers but are valid for humans.
+# Why accept 403?
+#   Some sites intentionally block bots or require cookies / JS challenges.
+#   The link can still be valid for humans, so many teams accept 403.
 accept = [
-  200,  # OK
-  203,
-  206,
-  301,
-  302,
-  303,
-  307,
-  308,
-  403   # Forbidden (intentionally accepted)
+  200, 203, 206,
+  301, 302, 303, 307, 308,
+
+  403 # Forbidden (intentionally accepted)
 ]
-
-
-############################
-# GitHub integration (rate limits)
-############################
-
-# If GITHUB_TOKEN is set in the environment, Lychee will
-# automatically use it for GitHub API requests.
-# Do NOT commit tokens here.
-# github_token = "DO_NOT_COMMIT_TOKENS"
 
 
 ############################
@@ -86,39 +71,38 @@ accept = [
 ############################
 
 # Exclude URLs from checking (regex-based).
-# Use this for intentionally unreachable or flaky endpoints.
+# Use this only if you have known flaky domains or intentionally unreachable links.
 exclude = [
-  # Localhost links in documentation
-  "^https?://localhost(:[0-9]+)?"
+  # Local development links in documentation
+  "^https?://localhost(:[0-9]+)?",
+  "^https://www\\.st\\.com/.*",
+  "^https://st\\.com/.*"
 ]
 
 
 ############################
-# Path exclusions (files / directories)
+# Path exclusions (files/directories)
 ############################
 
-# Exclude paths from being scanned entirely (regex-based).
-# This is the correct mechanism for path-level ignoring.
+# Exclude paths from being scanned (regex-based).
 #
-# Notes:
-#   - .gitignore is also respected by Lychee
-#   - Use this for generated output, vendored code, legacy docs, etc.
+# Regex notes:
+#   - "(^|/)" matches either the start of the path or a directory separator
+#   - "(/|$)" ensures we match a directory boundary (or end of path)
 exclude_path = [
-  # Legacy documentation
+  # Legacy documentation directory (your current pain point)
   "(^|/)docs/_Legacy(/|$)",
 
-  # Vendored / third-party code
+  # Exclude "Drivers" directories anywhere under examples/
+  # (macOS paths and repo paths are typically normalized with "/")
+  "(^|/)examples/.*/Drivers(/|$)",
+
+  # Vendored / third-party content
   "(^|/)third_party(/|$)",
 
   # Generated artifacts
   "(^|/)dist(/|$)",
 
-  # Exclude any file that has an extension OTHER than md/html/htm.
-  #
-  # Explanation:
-  #   - (?i)              => case-insensitive
-  #   - \.                => literal dot before extension
-  #   - (?!md$|html$|htm$)=> negative lookahead (NOT md/html/htm)
-  #   - [a-z0-9]+$        => file extension
-  "(?i)\\.(?!md$|html$|htm$)[a-z0-9]+$"
+  # Git metadata (usually unnecessary, but harmless to exclude explicitly)
+  "(^|/)\\.git(/|$)"
 ]
