scan repo added

--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -36,6 +36,8 @@ jobs:
           #   - You can later add more patterns (e.g. './**/*.html') if needed.
           args: >
             --config lychee.toml
+            --no-progress
+            .
           #
           # fail:
           #   - If true, the workflow will fail when lychee finds broken links.
