--- a/.github/workflows/trice_lib_reusable.yml
+++ b/.github/workflows/trice_lib_reusable.yml
@@ -128,6 +128,10 @@ jobs:
           # and matches the typical embedded toolchain expectation.
           export OBJCOPY=arm-none-eabi-objcopy
 
+          # Tell clang where the ARM GCC toolchain is located (CI only).
+          # On ubuntu-latest with gcc-arm-none-eabi from apt, this is /usr.
+          export CLANG_GCC_TOOLCHAIN=/usr
+
           # 1) GCC all-target builds (TRICE ON/OFF)
           if [ "${{ inputs.toolchain_gcc_trice_on }}" = "true" ]; then
             ./ci_build.sh \
