--- a/.github/workflows/trice_lib_reusable.yml
+++ b/.github/workflows/trice_lib_reusable.yml
@@ -150,15 +150,20 @@ jobs:
 
             # Provide Newlib + GCC internal headers to clang (cross).
             # This is required for stdlib.h, stdint.h, etc. in bare-metal builds.
-            NEWLIB_INC="/usr/arm-none-eabi/include"
+
+            NEWLIB_STDLIB="$(arm-none-eabi-gcc -print-file-name=stdlib.h)"
+            NEWLIB_INC="$(dirname "${NEWLIB_STDLIB}")"
             GCC_INC="$(arm-none-eabi-gcc -print-file-name=include)"
 
             # Fail early with a clear error if paths are missing.
+            test -f "${NEWLIB_STDLIB}"
             test -d "${NEWLIB_INC}"
             test -d "${GCC_INC}"
 
             # Makefile will append this to clang flags (see clang0.mak change).
             export CLANG_SYS_INCLUDES="-isystem ${NEWLIB_INC} -isystem ${GCC_INC}"
+            echo "NEWLIB_INC=${NEWLIB_INC}"
+            echo "GCC_INC=${GCC_INC}"
             echo "CLANG_SYS_INCLUDES=${CLANG_SYS_INCLUDES}"
 
             ./ci_build.sh \
