--- a/.github/workflows/trice_lib_reusable.yml
+++ b/.github/workflows/trice_lib_reusable.yml
@@ -148,28 +148,29 @@ jobs:
           # 2) Clang build(s) (as implemented in ci_build.sh)
           if [ "${{ inputs.toolchain_clang }}" = "true" ]; then
 
-            # Provide Newlib + GCC internal headers to clang (cross).
-            # This is required for stdlib.h, stdint.h, etc. in bare-metal builds.
+          # Provide Newlib + GCC internal headers to clang (cross).
+          # This is required for stdlib.h, stdint.h, etc. in bare-metal builds.
 
-            NEWLIB_STDLIB="$(arm-none-eabi-gcc -print-file-name=stdlib.h)"
-            NEWLIB_INC="$(dirname "${NEWLIB_STDLIB}")"
-            GCC_INC="$(arm-none-eabi-gcc -print-file-name=include)"
+          GCC_INC="$(arm-none-eabi-gcc -print-file-name=include)"
 
-            # Fail early with a clear error if paths are missing.
-            test -f "${NEWLIB_STDLIB}"
-            test -d "${NEWLIB_INC}"
-            test -d "${GCC_INC}"
+          # On Ubuntu runners the Newlib headers are installed by the gcc-arm-none-eabi package.
+          # We locate the directory containing stdlib.h via dpkg to avoid hardcoded paths.
+          NEWLIB_STDLIB="$(dpkg -L gcc-arm-none-eabi | grep -E '/include/stdlib\.h$' | head -n 1)"
+          NEWLIB_INC="$(dirname "${NEWLIB_STDLIB}")"
 
-            # Makefile will append this to clang flags (see clang0.mak change).
-            export CLANG_SYS_INCLUDES="-isystem ${NEWLIB_INC} -isystem ${GCC_INC}"
-            echo "NEWLIB_INC=${NEWLIB_INC}"
-            echo "GCC_INC=${GCC_INC}"
-            echo "CLANG_SYS_INCLUDES=${CLANG_SYS_INCLUDES}"
+          # Fail early with a clear error if paths are missing.
+          test -d "${GCC_INC}"
+          test -n "${NEWLIB_STDLIB}"
+          test -f "${NEWLIB_STDLIB}"
+          test -d "${NEWLIB_INC}"
 
-            ./ci_build.sh \
-              --toolchain=clang \
-              --trice=on \
-              --configs=none
+          # Makefile will append this to clang flags (see clang0.mak change).
+          export CLANG_SYS_INCLUDES="-isystem ${NEWLIB_INC} -isystem ${GCC_INC}"
+          echo "NEWLIB_STDLIB=${NEWLIB_STDLIB}"
+          echo "NEWLIB_INC=${NEWLIB_INC}"
+          echo "GCC_INC=${GCC_INC}"
+          echo "CLANG_SYS_INCLUDES=${CLANG_SYS_INCLUDES}"
+
           fi
 
       - name: Upload build artifacts
