comment typos corrected

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -46,12 +46,12 @@ jobs:
           version: latest
           # "release --clean" is the modern equivalent of "--rm-dist":
           # it removes the dist/ directory before building, so you never
-          # accidentally ship stale artefacts from a previous run.
+          # accidentally ship stale artifacts from a previous run.
           args: release --clean
         env:
           # GitHub automatically provides this token.
           # GoReleaser uses it to create or update the GitHub Release and
-          # upload the build artefacts (archives, checksums, etc.).
+          # upload the build artifacts (archives, checksums, etc.).
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # You previously had DEFAULT_BRANCH here; GoReleaser does not
           # need it by default, so it is omitted for clarity.
